--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // ViewPager2
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    //Viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //RoundedImageView
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
