--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     //RoundedImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //LottieAnimation
+    implementation 'com.airbnb.android:lottie:5.2.0'
 }
