git commit -m 'map implementation'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="6k8p3nms8b" />
     </application>
 
 </manifest>
