--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     //NaverMap
     implementation 'com.naver.maps:map-sdk:3.15.0'
+
+    //RecyclerView
+    implementation 'com.android.support:design:28.0.0'
 }
