--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.6.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.google.android.material:material:1.4.0-alpha02'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //implementation group: 'com.kakao.sdk', name: 'kakaolink', version: project.KAKAO_SDK_VERSION
 
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
