--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 }
