--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,15 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    //implementation group: 'com.kakao.sdk', name: 'kakaolink', version: project.KAKAO_SDK_VERSION
+
+    //kakao
+    implementation "com.kakao.sdk:v2-all:2.11.0" // 전체 모듈 설치, 2.11.0 버전부터 지원
+    implementation "com.kakao.sdk:v2-user:2.11.0" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.11.0" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.11.0" // 카카오스토리
+    implementation "com.kakao.sdk:v2-share:2.11.0" // 메시지(카카오톡 공유)
+    implementation "com.kakao.sdk:v2-navi:2.11.0" // 카카오내비
+    implementation "com.kakao.sdk:v2-friend:2.11.0" // 카카오톡 소셜 피커, 리소스 번들 파일 포함
 
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
